--- a/index.html
+++ b/index.html
@@ -39,8 +39,45 @@
         </div>
       </header>
 
-      <main class="content mt-5 pt-2 container">
-        
+      <main class="content">
+        <div class="section-top">
+          <div class="d-flex justify-content-center align-items-center h-100">
+            <div class="col-5 d-flex flex-column align-items-center justify-content-center">
+              <img src="images/huntakiller.svg" alt="">
+              <h1 class="casestudy-title mt-4">Catching more players using Facebook’s campaign budget optimization</h1>
+            </div>          
+          </div>
+        </div>
+
+        <div class="container mt-5 pt-3">
+          <div class="sections d-flex justify-content-between">
+            <div class="col-6 pl-0 pr-4 d-flex flex-column">
+              <div class="section">
+                <h2 class="section-title">THE CHALLENGE</h2>
+                <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, we were asked to come back again 10 business days before Black Friday / Cyber Mondayand help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
+              </div>
+
+              <div class="section mt-5 pt-2">
+                <h2 class="section-title">OUR APPROACH</h2>
+                <p class="section-description mt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum voluptas, quidem dolore a quod sunt id quia, impedit perspiciatis recusandae in eius officiis nobis maiores sed neque culpa sequi quaerat!</p>
+              </div>
+            </div>
+            
+            <div class="col-4 px-0">
+              <div class="section">
+                <h2 class="section-title">SERVICES</h2>
+                <div class="list-group mt-4">
+                  <div class="list-group-item d-flex align-items-center bg-transparent border-0 p-0">
+                    <div class="service-icon"><img src="images/facebook-advertising.svg" alt="" /></div>
+                    <h4>Facebook Advertising</h4>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+
       </main>
     </div>
 
