added results and facebook advertising section

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
           </div>
         </div>
 
-        <div class="container mt-5 pt-3">
-          <div class="sections d-flex justify-content-between">
-            <div class="col-6 pl-0 pr-4 d-flex flex-column">
+        <div class="mt-5 pt-5">
+          <div class="container pb-5 sections d-flex justify-content-between">
+            <div class="col-6 pl-0 pr-4 pb-3 d-flex flex-column">
               <div class="section">
                 <h2 class="section-title">THE CHALLENGE</h2>
                 <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, we were asked to come back again 10 business days before Black Friday / Cyber Mondayand help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
@@ -66,18 +66,72 @@
             <div class="col-4 px-0">
               <div class="section">
                 <h2 class="section-title">SERVICES</h2>
-                <div class="list-group mt-4">
-                  <div class="list-group-item d-flex align-items-center bg-transparent border-0 p-0">
-                    <div class="service-icon"><img src="images/facebook-advertising.svg" alt="" /></div>
-                    <h4>Facebook Advertising</h4>
+                <div class="services d-flex flex-column mt-4 pt-2">
+                  <div class="services-item d-flex align-items-center mb-4 pb-1">
+                    <div class="service-icon d-flex justify-content-center align-items-center rounded-pill"><img src="images/facebook-advertising.svg" alt="" /></div>
+                    <h4 class="service-title ml-3">Facebook Advertising</h4>
+                  </div>
+
+                  <div class="services-item d-flex align-items-center mb-4 pb-1">
+                    <div class="service-icon d-flex justify-content-center align-items-center rounded-pill"><img src="images/email-marketing.svg" alt="" /></div>
+                    <h4 class="service-title ml-3">E-mail Marketing</h4>
+                  </div>
+
+                  <div class="services-item d-flex align-items-center mb-4 pb-1">
+                    <div class="service-icon d-flex justify-content-center align-items-center rounded-pill"><img src="images/conversion-rate-optimization.svg" alt="" /></div>
+                    <h4 class="service-title ml-3">Conversion Rate Optimization</h4>
                   </div>
                 </div>
               </div>
             </div>
 
           </div>
-        </div>
 
+          <div class="section my-5 py-5 light-bg">
+            <div class="container my-2">
+              <h2 class="section-title text-center">THE RESULT</h2>
+              <div class="results mt-5 mb-4">
+                <div class="row">
+                  <div class="col-4 px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-5">
+                      <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
+                      <p class="result-description text-center mt-3 mx-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
+                    </div>
+                  </div>
+                  <div class="col-4 px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4">
+                      <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
+                      <p class="result-description text-center mt-3 mx-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
+                    </div>
+                  </div>
+                  <div class="col-4 px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-5">
+                      <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
+                      <p class="result-description text-center mt-3">We increased subscribers using campaign budget optimization and automatic placements</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-5 py-5">
+            <div class="container my-2">
+              <div class="d-flex justify-content-between">
+                <div class="col-6 py-5 pr-5">
+                  <h2 class="section-title">Facebook Advertising</h2>
+                  <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
+                </div>
+
+                <div class="col-6 section-img d-flex justify-content-end">
+                  <img src="images/facebook-ad.png" alt="">
+                </div>
+              </div>
+            </div>
+          </div>
+          
+        </div>
+      
       </main>
     </div>
 
