added conversion rate optimization section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
 
           <div class="section my-5 py-5">
-            <div class="container my-2">
+            <div class="container mt-2 mb-4">
               <div class="d-flex justify-content-between">
                 <div class="col-6 py-5 pr-5">
                   <h2 class="section-title">Facebook Advertising</h2>
@@ -126,6 +126,39 @@
                 <div class="col-6 section-img d-flex justify-content-end">
                   <img src="images/facebook-ad.png" alt="">
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-5 py-5 light-bg">
+            <div class="container my-2">
+              <h2 class="section-title text-center">CONVERSION RATE OPTIMIZATION</h2>
+              <h4 class="section-subtitle text-center mt-2 pt-1">Over a year of working together we were able to 2x conversion</h4>
+
+              <div class="before-after mt-5 mb-4">
+                <div class="d-flex align-items-center justify-content-between pt-3">
+                  <div class="col-4 pr-0 d-flex flex-column">
+                    <a href="#" class="tab active mb-2 p-4 d-flex flex-column">
+                      <div class="tab-title ml-3">BEFORE</div>
+                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </a>
+
+                    <a href="#" class="tab mt-4 p-4 d-flex flex-column">
+                      <div class="tab-title ml-3">AFTER</div>
+                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    </a>
+                  </div>
+
+                  <div class="col-7 pl-5 pr-0 d-flex justify-content-center position-relative">
+                    <div class="website-shadow pl-4"></div>
+                    <div class="website p-4">
+                      <div class="website-img">
+                        <img src="images/before.png" alt="" />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                
               </div>
             </div>
           </div>
