converted to responsive

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a class="py-3" href="#"><img src="images/logo.svg" alt=""></a>
             </div>
             
-            <nav class="navbar navbar-expand-lg p-0">
+            <nav class="navbar navbar-expand-sm p-0">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -42,16 +42,18 @@
       <main class="content">
         <div class="section-top">
           <div class="d-flex justify-content-center align-items-center h-100">
-            <div class="col-5 d-flex flex-column align-items-center justify-content-center">
-              <img src="images/huntakiller.svg" alt="">
+            <div class="col-12 col-md-5 d-flex flex-column align-items-center justify-content-center">
+              <div class="company-logo">
+                <img src="images/huntakiller.svg" alt="">
+              </div>
               <h1 class="casestudy-title mt-4">Catching more players using Facebook’s campaign budget optimization</h1>
             </div>          
           </div>
         </div>
 
         <div class="mt-5 pt-5">
-          <div class="container pb-5 sections d-flex justify-content-between">
-            <div class="col-6 pl-0 pr-4 pb-3 d-flex flex-column">
+          <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
+            <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column">
               <div class="section">
                 <h2 class="section-title">THE CHALLENGE</h2>
                 <p class="section-description mt-3">After helping Hunt A Killer to a 8-figure run rate, we were asked to come back again 10 business days before Black Friday / Cyber Mondayand help reduce acquisition costs & 2x the active subscriber in 90 days.</p>
@@ -63,7 +65,7 @@
               </div>
             </div>
             
-            <div class="col-4 px-0">
+            <div class="col-xl-4 mt-5 pt-2 mt-md-0 pt-md-0 col-md-5 px-0">
               <div class="section">
                 <h2 class="section-title">SERVICES</h2>
                 <div class="services d-flex flex-column mt-4 pt-2">
@@ -91,21 +93,21 @@
             <div class="container my-2">
               <h2 class="section-title text-center">THE RESULT</h2>
               <div class="results mt-5 mb-4">
-                <div class="row">
-                  <div class="col-4 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-5">
+                <div class="row justify-content-center">
+                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
-                      <p class="result-description text-center mt-3 mx-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
+                      <p class="result-description text-center mt-3 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
-                  <div class="col-4 px-4">
+                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
                     <div class="result bg-white d-flex flex-column align-items-center px-4">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
-                      <p class="result-description text-center mt-3 mx-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
+                      <p class="result-description text-center mt-3 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
-                  <div class="col-4 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-5">
+                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
                       <p class="result-description text-center mt-3">We increased subscribers using campaign budget optimization and automatic placements</p>
                     </div>
@@ -115,15 +117,15 @@
             </div>
           </div>
 
-          <div class="section my-5 py-5">
+          <div class="section my-5 py-md-5">
             <div class="container mt-2 mb-4">
               <div class="d-flex justify-content-between">
-                <div class="col-6 py-5 pr-5">
+                <div class="col-md-6 py-5 pr-3 pr-lg-5">
                   <h2 class="section-title">Facebook Advertising</h2>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
 
-                <div class="col-6 section-img d-flex justify-content-end">
+                <div class="col-sm-6 col-lg-5 section-img d-none d-md-flex align-items-start align-items-sm-center justify-content-end">
                   <img src="images/facebook-ad.png" alt="">
                 </div>
               </div>
@@ -136,20 +138,20 @@
               <h4 class="section-subtitle text-center mt-2 pt-1">Over a year of working together we were able to 2x conversion</h4>
 
               <div class="before-after mt-5 mb-4">
-                <div class="d-flex align-items-center justify-content-between pt-3">
-                  <div class="col-4 pr-0 d-flex flex-column nav" role="tablist" aria-orientation="vertical">
-                    <a class="tab active mb-2 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                <div class="d-flex align-items-center justify-content-between pt-3 flex-wrap">
+                  <div class="col-lg-4 pr-0 d-flex flex-lg-column nav flex-sm-nowrap" role="tablist" aria-orientation="vertical">
+                    <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
                       <div class="tab-title ml-3">BEFORE</div>
                       <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </a>
 
-                    <a class="tab mt-4 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
+                    <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
                       <div class="tab-title ml-3">AFTER</div>
                       <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
                     </a>
                   </div>
 
-                  <div class="col-7 pl-5 pr-0 d-flex justify-content-center position-relative">
+                  <div class="col-12 mt-5 mt-xl-0 col-lg-7 pl-0 pl-xl-5 pr-0 d-flex justify-content-center position-relative">
                     <div class="website-shadow pl-4"></div>
                     <div class="website p-4 tab-content" id="v-pills-tabContent">
                       <div class="website-img tab-pane fade show active" id="before" role="tabpanel" aria-labelledby="v-pills-home-tab">
@@ -169,12 +171,22 @@
             <div class="container mt-2 mb-4">
               <h2 class="section-title text-center">See What Hunt A Killer Say About Sweat Pants Agency</h2>
               <div class="mt-5 d-flex justify-content-center">
-                <div class="video col-10">
+                <div class="video col-12 col-lg-10">
                   <video poster="images/video.png" width="100%" controls>
                     <source src="Sweatpants-Agency.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                   </video>
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-5 pb-3">
+            <div class="container contact mt-2 mb-4">
+              <h2 class="section-title text-center">Want Awesome Work Like This For Your Brand?</h2>
+              <h4 class="section-subtitle text-center mt-2 pt-1">Apply now for a free cconsultant, and one of our strategist will be in touch shortly</h4>
+              <div class="mt-5 d-flex justify-content-center">
+                <a class="btn-primary py-3 px-5" href="#">Let's Talk</a>
               </div>
             </div>
           </div>
