fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <a class="py-3" href="#"><img src="images/logo.svg" alt=""></a>
             </div>
             
-            <nav class="navbar navbar-expand-sm p-0">
+            <nav class="navbar navbar-expand-sm p-0 navbar-light"">
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -34,6 +34,7 @@
                 </ul>
               </div>
             </nav>
+
           </div>
 
         </div>
@@ -51,7 +52,7 @@
           </div>
         </div>
 
-        <div class="mt-5 pt-5">
+        <div class="mt-5 pt-2 pt-sm-5">
           <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
             <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column">
               <div class="section">
@@ -95,19 +96,19 @@
               <div class="results mt-5 mb-4">
                 <div class="row justify-content-center">
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
                       <p class="result-description text-center mt-3 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
                       <p class="result-description text-center mt-3 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
                       <p class="result-description text-center mt-3">We increased subscribers using campaign budget optimization and automatic placements</p>
                     </div>
@@ -167,7 +168,7 @@
             </div>
           </div>
 
-          <div class="section my-5 py-5">
+          <div class="section my-5 py-4 py-sm-5">
             <div class="container mt-2 mb-4">
               <h2 class="section-title text-center">See What Hunt A Killer Say About Sweat Pants Agency</h2>
               <div class="mt-5 d-flex justify-content-center">
@@ -181,7 +182,7 @@
             </div>
           </div>
 
-          <div class="section my-5 pb-3">
+          <div class="section mt-5 mb-4 my-sm-5 pb-3">
             <div class="container contact mt-2 mb-4">
               <h2 class="section-title text-center">Want Awesome Work Like This For Your Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1">Apply now for a free cconsultant, and one of our strategist will be in touch shortly</h4>
