fixed responsive issues

--- a/index.html
+++ b/index.html
@@ -97,21 +97,24 @@
               <div class="results mt-5 mb-4">
                 <div class="row justify-content-center">
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
-                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
-                      <p class="result-description text-center mt-3 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
+                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <p class="result-description text-center mt-2 pt-1 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
-                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
-                      <p class="result-description text-center mt-3 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
+                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <p class="result-description text-center mt-2 pt-1 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
                   <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInRight">
-                    <div class="result bg-white d-flex flex-column align-items-center px-5 px-sm-4 px-xl-5">
+                    <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
-                      <p class="result-description text-center mt-3">We increased subscribers using campaign budget optimization and automatic placements</p>
+                      <h4 class="result-title d-flex justify-content-center mt-4">Lorem Ipsum</h4>
+                      <p class="result-description text-center mt-2 pt-1">We increased subscribers using campaign budget optimization and automatic placements</p>
                     </div>
                   </div>
                 </div>
@@ -124,6 +127,9 @@
               <div class="d-flex justify-content-between">
                 <div class="col-md-6 py-5 pr-3 pr-lg-5 animated fadeInLeft">
                   <h2 class="section-title">Facebook Advertising</h2>
+                  <div class="mt-4 section-img d-block d-md-none">
+                    <img class="img-fluid" src="images/facebook-ad.png" alt="">
+                  </div>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
 
