--- a/index.html
+++ b/index.html
@@ -148,14 +148,12 @@
               <div class="before-after mt-5 mb-4">
                 <div class="d-flex align-items-center justify-content-between pt-3 flex-wrap">
                   <div class="col-lg-4 pr-0 d-flex flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
-                    <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                      <div class="tab-title ml-3">BEFORE</div>
-                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-3 p-md-4 d-flex flex-column w-100" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
+                      <div class="tab-title my-2 mx-3 text-center text-lg-left">BEFORE</div>
                     </a>
 
-                    <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-4 d-flex flex-column" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                      <div class="tab-title ml-3">AFTER</div>
-                      <p class="tab-description ml-3 mt-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
+                    <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-3 p-md-4 d-flex flex-column w-100" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
+                      <div class="tab-title my-2 mx-3 text-center text-lg-left">AFTER</div>
                     </a>
                   </div>
 
