added facebook case study section and updated conversion rate optimization section

--- a/index.html
+++ b/index.html
@@ -53,8 +53,27 @@
           </div>
         </div>
 
-        <div class="mt-5 pt-2 pt-sm-5">
-          <div class="container pb-5 sections d-flex justify-content-between flex-wrap">
+        <div class="sections">
+          <div class="section mt-md-4 mb-md-5 mt-lg-5 mb-lg-5 pt-5">
+            <div class="container mt-2 mb-4">
+              <div class="video-section d-flex justify-content-between flex-wrap">
+                <div class="video col-12 col-lg-6 pl-0 animated fadeInLeft">
+                  <video poster="images/video.png" width="100%" controls>
+                    <source src="Sweatpants-Agency.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+                </div>
+
+                <div class="about-video col-lg-6 px-0 py-3 pl-lg-5 pr-lg-5 animated fadeInRight">
+                  <h2 class="section-title">A single ad did this?</h2>
+                  <p class="section-description mt-4">With (almost) a single ad, we 2x'ed Hunt a Killer's revenue. As a result, they hit $15m ARR in 2018. 2019? They ended with a $50m run rate. Here's exactly how it was done. </p>
+                </div>
+
+              </div>
+            </div>
+          </div>
+          
+          <div class="container py-5 sections d-flex justify-content-between flex-wrap">
             <div class="col-md-6 pl-0 pr-md-4 pr-0 pb-3 d-flex flex-column animated fadeInLeft">
               <div class="section">
                 <h2 class="section-title">THE CHALLENGE</h2>
@@ -96,21 +115,21 @@
               <h2 class="section-title text-center animated fadeInDown">THE RESULT</h2>
               <div class="results mt-5 mb-4">
                 <div class="row justify-content-center">
-                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
+                  <div class="col-sm-9 col-md-6 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInLeft">
                     <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">28%</div>
                       <h4 class="result-title d-flex text-center justify-content-center mx-2 mt-4">Lorem Ipsum</h4>
                       <p class="result-description text-center mt-2 pt-1 mx-xl-2">We found a new winning ad that reduced acquisitions costs tracked through Facebook by 28%</p>
                     </div>
                   </div>
-                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4">
+                  <div class="col-sm-9 col-md-6 col-lg-4 mb-4 mb-lg-0 px-4">
                     <div class="result bg-white d-flex flex-column align-items-center px-4">
                       <div class="result-heading d-flex justify-content-center align-items-center">2X</div>
                       <h4 class="result-title d-flex text-center justify-content-center mx-2 mt-4">Lorem Ipsum</h4>
                       <p class="result-description text-center mt-2 pt-1 mx-xl-3">We doubled the active subscriber based in 34 days (56 days before the already aggressive goal had scheduled)</p>
                     </div>
                   </div>
-                  <div class="col-sm-9 col-md-5 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInRight">
+                  <div class="col-sm-9 col-md-6 col-lg-4 mb-4 mb-lg-0 px-4 animated fadeInRight">
                     <div class="result bg-white d-flex flex-column align-items-center px-4 px-xl-5">
                       <div class="result-heading d-flex justify-content-center align-items-center">4.9X</div>
                       <h4 class="result-title d-flex text-center justify-content-center mx-2 mt-4">Lorem Ipsum</h4>
@@ -124,18 +143,30 @@
 
           <div class="section my-5 py-md-5">
             <div class="container mt-2 mb-4">
-              <div class="d-flex justify-content-between">
-                <div class="col-md-6 py-5 pr-3 pr-lg-5 animated fadeInLeft">
+              <div class="d-flex justify-content-between flex-wrap">
+                <div class="col-md-6 py-4 py-md-5 pr-3 pr-lg-5 animated fadeInLeft">
                   <h2 class="section-title">Facebook Advertising</h2>
-                  <div class="mt-4 section-img d-block d-md-none">
-                    <img class="img-fluid" src="images/facebook-ad.png" alt="">
-                  </div>
                   <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
                 </div>
 
-                <div class="col-sm-6 col-lg-5 section-img d-none d-md-flex align-items-start align-items-sm-center justify-content-end animated fadeInRight">
+                <div class="col-md-6 col-lg-5 section-img d-flex align-items-start align-items-sm-center justify-content-end animated fadeInRight">
                   <img src="images/facebook-ad.png" alt="">
                 </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="section my-5 py-4 py-md-5">
+            <div class="container mt-2 mb-4">
+              <div class="section-right d-flex justify-content-between flex-wrap">
+                <div class="section-right-column col-md-5 pt-md-5 pt-lg-0 px-xl-0 section-img d-flex align-items-start align-items-lg-center justify-content-end animated fadeInRight">
+                  <img src="images/facebook-case-study.png" alt="">
+                </div>
+                <div class="col-md-6 py-4 pl-3 pl-lg-4 animated fadeInLeft">
+                  <h2 class="section-title">Facebook's Team Was so Impressed... They Created an Official Case Study.</h2>
+                  <p class="section-description mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Egestas proin sed platea laoreet elementum dui. Sed eget duis habitant iaculis ante sagittis condimentum amet ornare. Pharetra magna auctor id lacus, dictum. Ultrices urna, elementum in libero, sollicitudin velit semper. Leo risus malesuada pretium, feugiat. Commodo, vitae hendrerit egestas enim amet, convallis egestas vel. Facilisi at orci, ullamcorper massa. </p>
+                </div>
+
               </div>
             </div>
           </div>
@@ -145,49 +176,40 @@
               <h2 class="section-title text-center animated fadeInDown">CONVERSION RATE OPTIMIZATION</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInDown">Over a year of working together we were able to 2x conversion</h4>
 
-              <div class="before-after mt-5 mb-4">
-                <div class="d-flex align-items-center justify-content-between pt-3 flex-wrap">
-                  <div class="col-lg-4 pr-0 d-flex flex-lg-column nav flex-sm-nowrap animated fadeInLeft" role="tablist" aria-orientation="vertical">
-                    <a class="tab active mb-3 mb-sm-0 mb-lg-2 mr-sm-3 mr-lg-0 p-3 p-md-4 d-flex flex-column w-100" data-toggle="pill" href="#before" role="tab" aria-controls="v-pills-home" aria-selected="true">
-                      <div class="tab-title my-2 mx-3 text-center text-lg-left">BEFORE</div>
-                    </a>
-
-                    <a class="tab mt-3 mt-sm-0 mt-lg-4 ml-sm-3 ml-lg-0 p-3 p-md-4 d-flex flex-column w-100" data-toggle="pill" href="#after" role="tab" aria-controls="v-pills-profile" aria-selected="false">
-                      <div class="tab-title my-2 mx-3 text-center text-lg-left">AFTER</div>
-                    </a>
-                  </div>
-
-                  <div class="col-12 mt-5 mt-xl-0 col-lg-7 pl-0 pl-xl-5 pr-0 d-flex justify-content-center position-relative animated fadeInRight">
-                    <div class="website-shadow pl-4"></div>
-                    <div class="website p-4 tab-content" id="v-pills-tabContent">
-                      <div class="website-img tab-pane fade show active" id="before" role="tabpanel" aria-labelledby="v-pills-home-tab">
-                        <img src="images/before.png" alt="" />
-                      </div>
-                      <div class="website-img tab-pane fade" id="after" role="tabpanel" aria-labelledby="v-pills-profile-tab">
-                        <img src="images/after.png" alt="" />
+              <div class="mt-5 mb-4 d-flex justify-content-center">
+                <div class="col-12 col-lg-8 px-0 d-flex justify-content-center position-relative animated fadeInUp">
+                  <div class="conversion-rate-optimization bg-white p-4 w-100">
+                    <div class="cro-section d-flex flex-column p-1">
+                      <h4 class="cro-section-title mb-1">Injecting Social Proof</h4>
+                      <p class="cro-section-description mt-2">One of the enhancements we made was introducing more social proof and concepts of use. 1m+ episodes shipped creates a 'jump on the bandwagon' feel, while each of the individual UGC (user generated content) were carefully curated based on customer feedback into how they play the game: Home alone with their dog in their PJs... date night... meeting friends at the pub... cracking open a bottle of wine... etc.</p>
+                      <div class="mt-4 w-100">
+                        <img class="img-fluid" src="images/cro-1.png" alt="">
                       </div>
                     </div>
+
+                    <div class="cro-section d-flex flex-column px-1 pt-3 pb-1 mt-4">
+                      <h4 class="cro-section-title mb-1">Section Title</h4>
+                      <p class="cro-section-description mt-2">Hunt a Killer places immense detail into their games. Our hypothesis was if we showed that more strongly, we'd inspire more sales. And we were right. This section gave a nice lift on conversion and is still the control with multiple 8-figures of ad traffic encountering it.</p>
+                      <div class="mt-4 w-100">
+                        <img class="img-fluid" src="images/cro-2.png" alt="">
+                      </div>
+                    </div>
+
+                    <div class="cro-section d-flex flex-column px-1 pt-3 pb-1 mt-4">
+                      <h4 class="cro-section-title mb-1">Section Title</h4>
+                      <p class="cro-section-description mt-2">We discovered our audience had an affinity for Netflix, so we formed a new hypothesis: If we present the boxes that make up the full series as 'episodes' in a 'season' -- inspired by how Netflix presents episodes and summaries -- we'd see a lift. Again, we were right, and there's evidence this helped retention/churn as well as it introduced future pacing.</p>
+                      <div class="mt-4 w-100">
+                        <img class="img-fluid" src="images/cro-3.png" alt="">
+                      </div>
+                    </div>
+
                   </div>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="section my-5 py-4 py-sm-5">
-            <div class="container mt-2 mb-4">
-              <h2 class="section-title text-center animated fadeInDown">See What Hunt A Killer Say About Sweat Pants Agency</h2>
-              <div class="mt-5 d-flex justify-content-center">
-                <div class="video col-12 col-lg-10">
-                  <video poster="images/video.png" width="100%" controls>
-                    <source src="Sweatpants-Agency.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="section mt-5 mb-4 my-sm-5 pb-3">
+          <div class="section py-5 mt-5 mb-4 my-sm-5 pb-3">
             <div class="container contact mt-2 mb-4">
               <h2 class="section-title text-center animated fadeInDown">Want Awesome Work Like This For Your Brand?</h2>
               <h4 class="section-subtitle text-center mt-2 pt-1 animated fadeInUp">Apply now for a free cconsultant, and one of our strategist will be in touch shortly</h4>
@@ -206,7 +228,7 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
     <script src='scripts/main.min.js'></script>
 
-    <footer class="footer mt-5">
+    <footer class="footer">
       <div class="container py-5 d-flex justify-content-center flex-wrap">
         <div class="logo mt-n1">
           <a class="p-4" href="#"><img src="images/logo.svg" alt=""></a>
